@@ -1,3 +1,7 @@
+2007-03-07  Brian Bidulock  <bidulock@openss7.org>
+
+	* src/kernel/strlookup.c: fix demand loading for clone minors
+
 2007-03-06  Brian Bidulock  <bidulock@openss7.org>
 
 	* doc/manual/Makefile.am: attempt proper texinfo dependencies
